# Winter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
Winter/: CMakeLists.txt
Winter/dep/glad/: CMakeLists.txt
Winter/dep/stb_image/: CMakeLists.txt
Winter/examples/: CMakeLists.txt  two_triangles.cpp
Winter/examples/antialiasing/: antialiasing.cpp  screenVertex.glsl
Winter/examples/basic_blocks/: basicFragmentShader.glsl  basic_blocks.cpp
Winter/examples/basic_shader/: basic_shader.cpp
Winter/examples/basic_texture/: basic_texture.cpp
Winter/examples/bloom/: basic.frag  bloom.cpp  lightCube.frag
Winter/examples/breakout/: ballObject.cpp  ballObject.h  game.cpp  game.h  gameLevel.cpp  gameLevel.h  gameObject.cpp  gameObject.h  main.cpp  particleGenerator.cpp  particleGenerator.h  pathManager.h  postProcessor.cpp  postProcessor.h  powerUp.h  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  spriteRenderer.cpp  spriteRenderer.h  textRenderer.cpp  textRenderer.h  texture2D.cpp
Winter/examples/debug/: debug.cpp  equirectangularToCubemap.frag
Winter/examples/deferred_shading/: basic.vert  deferred_shading.cpp  gBuffer.frag  gBuffer.vert  lightingPass.frag
Winter/examples/exploding_geometry/: basicFragment.glsl  exploding_geometry.cpp
Winter/examples/font/: font.cpp
Winter/examples/framebuffer/: basicVertexShader.glsl  framebuffer.cpp  screenFragmentshader.glsl  screenVertexShader.glsl
Winter/examples/hdr/: hdr.cpp  hdr.frag  screen.vert
Winter/examples/light_shadows/: basic.vert  lightCube.vert  light_shadows.cpp  screen.frag
Winter/examples/pbr/: pbr.cpp  (+2 more)
Winter/shaders/: blinnShadow.frag  depth.frag  empty.frag  explode.geom  explode.vert  gouraud.frag  gouraud.vert  hdr.frag  lightingPass.frag  parallaxMap.frag  pbrTextures.frag  points.geom  reflectiveSkybox.vert  screen.frag  singleColor.frag  singleColor.vert  transparent.frag  transparent.vert  visualizeNormals.frag
Winter/src/: camera.cpp  camera.h  fpsCounter.cpp  fpsCounter.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pathManager.h  texture.cpp  texture.h  vertex.h
(+40 files in other folders)
